--- a/ApiWeatherKrasnov/ApiWeatherKrasnov.Android/Properties/AndroidManifest.xml
+++ b/ApiWeatherKrasnov/ApiWeatherKrasnov.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.apiweatherkrasnov">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
-    <application android:label="ApiWeatherKrasnov.Android" android:theme="@style/MainTheme"></application>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.apiweatherkrasnov" android:installLocation="preferExternal">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
+	<application android:label="ApiWeatherKrasnov.Android" android:theme="@style/MainTheme">
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyCJ5AAXhpnI1dU0afo330mIeqM--LpmVTo" />
+		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+	</application>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 </manifest>
